# FunctionalModelTest

./: .gitignore  CMakeLists.txt  CMakePresets.json
assets/scenarios/: sample_scenario.json
src/: CMakeLists.txt
src/app/scenario/: ScenarioDefinition.h  ScenarioLoader.cpp  ScenarioLoader.h
src/app/services/: SimulationSession.cpp  SimulationSession.h
src/core/component/: IComponent.h  MissionComponent.h  MovementComponent.h  SensorComponent.h
src/core/entity/: Entity.cpp  Entity.h
src/core/math/: Vector2.h
src/core/simulation/: SimulationManager.cpp  SimulationManager.h  SimulationUpdateContext.h
src/main/: main.cpp
src/ui/widgets/: EntityEditorPanel.cpp  EntityEditorPanel.h  MainWindow.cpp  MainWindow.h  MissionEditorPanel.cpp  MissionEditorPanel.h  ScenarioEditorPanel.cpp  ScenarioEditorPanel.h  SimulationControlPanel.cpp  SimulationControlPanel.h  WorkbenchWindow.cpp  WorkbenchWindow.h
tests/: CMakeLists.txt
tests/core/: SimulationManagerTests.cpp
